# GOC-Guardian-of-CFP-

./: .env.example  .gitignore  DEMO_GUIDE.md  FIX_EXPLANATION.md  FIX_SUMMARY.md  ISSUE_FIXED.md  QUICKSTART.md  README.md  cleanup.sh  demo_test.py  example_usage.py  interactive_test.py  pyproject.toml  requirements.txt  test_evaluator.py
cfp_reviewer_checker/: README.md  main.py  requirements.txt
cfp_reviewer_checker/src/: __init__.py
cfp_reviewer_checker/src/agents/: __init__.py  conference_intelligence_agent.py  oumi_evaluation_agent.py  reviewer_decision_agent.py  similarity_detection_agent.py
cfp_reviewer_checker/src/config/: __init__.py  oumi_client.py
cfp_reviewer_checker/src/evaluation/: __init__.py  oumi_pipeline.py
cfp_reviewer_checker/src/models/: __init__.py  corpus_manager.py  reviewer_report.py
cfp_reviewer_checker/src/scrapers/: __init__.py  conference_detector.py  parallel_crawler.py  platform_adapters.py
cfp_reviewer_checker/src/ui/: __init__.py  prompts.py  reviewer_app.py
cfp_reviewer_checker/src/utils/: __init__.py  exceptions.py
goc_guardian/: __init__.py  main.py  models.py  web_app.py
goc_guardian/agents/: __init__.py  abstract_analysis.py  base.py  content_evaluation.py  coordinator.py  enhanced_coordinator.py
goc_guardian/data_sources/: __init__.py  sched_client.py  semantic_search.py  sessionize_client.py
goc_guardian/evaluators/: __init__.py  oumi_evaluator.py
goc_guardian/utils/: __init__.py  exceptions.py
